--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+    font-family: sans-serif;
+}
+
 :root {
     --hero_footer_background: #1F2937;
 }
@@ -8,8 +12,15 @@ header {
     padding-right: 400px;
 }
 
+nav {
+    display: flex;
+}
+
 nav a {
     color: white;
+    text-decoration: none;
+    font-size: 18px;
+    padding: 10px 15px;
 }
 
 footer {
@@ -20,9 +31,40 @@ footer {
     padding-bottom: 30px;
 }
 
+.logo {
+    font-size: 24px;
+    color: #F9FAF8;
+    padding: 10px 15px 10px 0px;
+    font-weight: bold;
+}
+
 .navbar {
     color: white;
     display: flex;
-    justify-content: stretch;
-    gap: 750px;
+    justify-content:space-between;
+}
+
+.hero-content {
+    display: flex;
+    padding: 75px 0px;
+}
+
+.hero-main-text {
+    color: #F9FAF8;
+    font-size: 48px;
+    font-weight: bolder;
+}
+
+.hero-secondary-text,
+.hero-button {
+    color: #E5E7EB;
+    font-size: 18px;
+}
+
+.hero-button {
+    background-color: #3882f6;
+    font-weight: bold;
+    padding: 10px 25px;
+    border: 0;
+    border-radius: 10px;
 }
