--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ figure div {
     justify-content:space-between;
 }
 
+/* Hero */
 .hero-content {
     display: flex;
     padding: 75px 0px;
@@ -78,6 +79,7 @@ figure div {
     border-radius: 10px;
 }
 
+/* Main Content */
 .section-padding {
     padding: 25px 400px;
 }
@@ -94,4 +96,22 @@ figure div {
 .image-styling {
     border: 5px solid #3882f6;
     border-radius: 20px;
+}
+
+/* Quote Section */
+.quote-section {
+    background-color: #E5E7EB;
+}
+
+.quote {
+    font-size: 36px;
+    font-style: italic;
+    color: #1F2937;
+}
+
+.quote-author {
+    display: flex;
+    justify-content: flex-end;
+    font-size: 28px;
+    font-weight: bold;
 }
