--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ figure div {
     color: #F9FAF8;
     font-size: 48px;
     font-weight: bolder;
+    line-height: 10px;
 }
 
 .hero-secondary-text,
@@ -114,4 +115,35 @@ figure div {
     justify-content: flex-end;
     font-size: 28px;
     font-weight: bold;
+}
+
+/* Sign Up Section */
+.sign-up {
+    margin: 75px 200px;
+    padding: 30px 100px;
+    background-color: #3882F6;
+    color: white;
+    font-size: 20px;
+    border: 3px solid white;
+    border-radius: 15px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.sign-up-message {
+    line-height: 5px;
+}
+
+.call-to-action {
+    font-weight: bold;
+    font-size: 30px;
+}
+
+.sign-up-button {
+    background-color: #3882F6;
+    color: white;
+    font-size: 28px;
+    padding: 10px 40px;
+    border: 3px solid white;
+    border-radius: 20px;
 }
